--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div id="content">
 <article id="about">
-<img src="http://krtownsend.com/R3_200.jpg" width="200px" style="float:left" cache-control="max-age=60"/>
+<img src="R3_200.jpg" width="200px" style="float:left" cache-control="max-age=60"/>
 <p>
 Hi, I am Kevin Townsend and unless I have been slow to update this page, I am a grad student at Iowa State University and a member of the Reconfigurable Computing Lab.
 </p>
