--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <header>
         <h1>Kevin Townsend</h1>
         <h2>Computing and Other Things</h2>
-<nav><a href="/web/20170707090103/http://krtownsend.com/">Home</a> <a href="/web/20170707090103/http://krtownsend.com/blog.html">blog</a></nav>
+<nav><a href="/">Home</a> <a href="/blog.html">blog</a></nav>
     </header>
 
 <div id="content">
