--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     There was more than one reason for my retirement, work break, sabbitical or whatever you want to call it.
     <ul>
       <li> Work stress. Not the work itself, more about dealing with interpersonal conflicts.</li>
-      <li> Work-life balance. Alphabet does promote work-life balance, but 2 issues got in the way for me. First, other people not respecting boundies. More than once I have been approached about an "urgent" issue 4pm on Friday that turned out not to be urgent. Second, me not learning that there are rarely any urgent issues at 4pm Friday that can't wait until Monday morning. Learning to identify and low-pass filter this people has been a struggle for me. </li>
+      <li> Work-life balance. Alphabet does promote work-life balance, but 2 issues got in the way for me. First, other people not respecting boundies. More than once I have been approached about an "urgent" issue 4pm on Friday that turned out not to be urgent. Second, me not learning that there are rarely any urgent issues at 4pm Friday that can't wait until Monday morning. Learning to identify and low-pass filter these people has been a struggle for me. </li>
       <li> Not doing non-work related projects and activities. Don't get me wrong I did plenty of non-work activities: board games, DnD, cycling, but I never seemed to get around to many of my non-work related to-do list items like exploring the bay area or traveling.</li>
     </ul>
     I realize this post contrasts to my last post (8 years ago). The truth is there is a lot of variety in large companies and its not reasonable to expect different teams to have similar dynamics.
